...
<string name="authorization_system_modify_users">Modify users</string>
<string name="authorization_local_view">View</string>
<string name="authorization_local_create_add_operation">Create add operation</string>
<string name="authorization_local_create_remove_operation">Create remove operation</string>
<string name="authorization_local_handle_operation">Handle operation</string>
<string name="authorization_local_configure">Configure</string>
<string name="login_fail">Login failed</string>
<string name="user_edit">Edit user</string>
<string name="storage_edit">Edit storage</string>
<string name="warehouse_edit">Edit warehouse</string>
<string name="user_authorizations">Authorizations</string>
<string name="app_name">Easy Inventory</string>
<string name="item_edit">Edit item</string>
...
<string name="profile_logout">Logout</string>
<string name="profile_password_old">Old password</string>
<string name="profile_password_new">New password</string>
<string name="profile_password_new_again">New password again</string>
<string name="profile_password_fail_mismatch">The new passowrds doesnt match</string>
<string name="profile_password_fail">Failed to change password</string>
<string name="tab_profile">Profile</string>
<string name="logout_fail">Failed to logout</string>
<string name="id_missing">Id missing</string>
<string name="storage_capacity">Capacity</string>
<string name="default_id">Random</string>
<string name="default_name">Default</string>
<string name="operation_item_serial_enable">Enable serials</string>
...
