<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_background"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/password_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_password_change"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_logout"
            android:textColor="@color/button_text" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>